<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/paper_vintage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@android:color/transparent" />

    <ImageView
        android:layout_below="@id/toolbar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/demoUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/label_details_username" />

    <TextView
        android:id="@+id/demoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/demoUserName"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/label_details_email" />

    <TextView
        android:id="@+id/demoAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/demoEmail"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/label_desc" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="48dp"
        android:layout_width="48dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>